Add form contact us, stylish section

--- a/HTML&CSS/Layout1/assets/styles/styles.css
+++ b/HTML&CSS/Layout1/assets/styles/styles.css
@@ -2,8 +2,55 @@ body {
     height: 100vh;
     border: solid 1px #fff;
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
+button:focus {
+    outline: none;
+}
+input,textarea {
+    color: #86878B;
+    opacity: 0.5;
+}
+textarea {
+    resize: none;
+    font-family: 'Raleway', sans-serif;
+}
+input:focus,
+textarea:focus{
+    outline: none;
+    color: #86878B;
+    opacity: 1;
+}
+p {
+    margin: 0;
+}
+.btn {
+    color: #ffffff;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 18px;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    line-height: 18px;
+    text-transform: capitalize;
+}
+    .btn:hover {
+             cursor: pointer;
+     }
+
+.title {
+    text-transform: uppercase;
+    font-size: 36px;
+}
+.flex-centre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 header, footer, section {
     padding: 0 100px;
 }
@@ -48,7 +95,11 @@ footer {
         .footer-social-item:last-child {
             margin: 0
         }
-
+section {
+    /*color: #86878B;*/
+    font-weight: 400;
+;
+}
 
 .footer-social-container,
 .header-navigation-container {
@@ -109,19 +160,169 @@ h1 {
 
 .btn-download {
     background-color: transparent;
-    color: #ffffff;
+    border-color: #ffffff;
     width: 150px;
     height: 42px;
-    border: 1px solid #ffffff;
-    border-radius: 5px;
-    font-weight: 500;
-    font-size: 16px;
-    font-style: normal;
-    line-height: 18px;
 }
 
-    .btn-download:hover {
-        cursor: pointer;
+
+.introduction-form-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.form-trial {
+    background-color: #ffffff;
+    width: 360px;
+    height: 390px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.form-trial-header {
+    height: 15%;
+    width: inherit;
+    border-radius: 5px 5px 0 0;
+    background-color: #DFDFDF;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-trial-btn-container {
+    background-color: #FF9B51;
+    height: 15%;
+    width: inherit;
+    border-radius: 0 0 5px 5px;
+}
+
+.btn-get-started {
+    width: inherit;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    color: #ffffff;
+    font-weight: 500;
+    text-transform: capitalize;
+    font-size: 16px;
+}
+.btn-get-started:hover {
+    cursor: pointer;
+}
+
+.trial-header-title {
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: #333333;
+
+}
+
+.trial-header-key-word {
+    color: #FF9B51;
+    text-transform: none;
+}
+
+.form-trial-body {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 0 4em;
+}
+
+.form-trial-input:not(:last-child) {
+    margin-bottom: 2.7em;
+}
+
+    .form-trial-input input {
+        width: 100%;
+        border-width: 0 0 2px;
+        border-color: #DFDFDF;
+        padding: 0 0 0.5em 0;
+    }
+
+    .form-trial-input input ::placeholder {
+        font-size: 16px;
+        color:#BDBDBD;
+    ;
+        opacity: 0.4;
+    }
+
+.section-social {
+    display: flex;
+    flex-display: row;
+    justify-content: space-between;
+    align-items: center;
+}
+    .section-social > * {
+        margin: 16px 0;
+    }
+
+.section-social-item:not(:last-child) {
+    margin: 0 2em 0.5em 0;
+}
+
+.section-social-text-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #86878B;
+    font-style: normal;
+}
+
+.section-social-list {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+
+.social-title {
+    font-weight: 700;
+    text-transform: capitalize;
+    margin-bottom: 1em;
+    color: #333333;
+}
+
+.section-stylish {
+    width: auto;
+    height: 20em;
+    background-image: url("../images/content/background-architecture.svg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    filter:sepia(0.2);
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    /*justify-content:center;*/
+    margin: 0 auto;
+    color: #FFFFFF;
+}
+.section-stylish-container {
+
+}
+
+.section-stylish-container > *:not(:last-child) {
+    margin-bottom: 26px;
+}
+
+.stylish-title {
+    color: #FFFFFF;
+}
+    .stylish-title:after {
+        display: block;
+        content: '';
+        height: 1px;
+        width: 2em;
+        background-color: #FFFFFF;
+        margin: 0.4em auto 0;
     }
 
 
@@ -129,3 +330,77 @@ h1 {
 
 
 
+
+
+
+
+
+
+
+
+.section-contact-us {
+    display: flex;
+    flex-direction: column;
+}
+.section-contact-us-header {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-us-title {
+    color: #212121;
+    margin: 0  auto;
+}
+
+.contact-us-title:after {
+    display: block;
+    content: '';
+    height: 1px;
+    width: 2em;
+    background-color: #FF8B38;
+    margin: 0.6em auto;
+}
+
+.contact-us-subtitle {
+    margin: 0.6em auto 5em;
+    color: #86878B;
+}
+
+.contact-us-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-us-input-container {
+    display: flex;
+    flex-direction: row;
+    /*justify-content: center;*/
+}
+
+.contact-us-input-container input,
+.contact-us-input-container textarea
+{
+    min-width: 32em;
+    border-width: 0 0 2px;
+    border-color: #DFDFDF;
+    margin: 0 5em 4em;
+    font-size: 16px;
+}
+
+.contact-us-input-container input ::placeholder,
+.contact-us-input-container textarea ::placeholder {
+    color: #BDBDBD;
+    font-size: 16px;
+}
+
+.input-container-left {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-contact-us {
+    width: 150px;
+    height: 42px;
+    background-color: #FF8B38;
+    border-color: #FF8B38;
+}
