--- a/HTML&CSS/Layout1/assets/styles/styles.css
+++ b/HTML&CSS/Layout1/assets/styles/styles.css
@@ -3,6 +3,7 @@ body {
     border: solid 1px #fff;
     margin: 0;
     font-family: 'Raleway', sans-serif;
+    box-sizing: border-box;
 }
 button:focus {
     outline: none;
@@ -23,6 +24,16 @@ textarea:focus{
 }
 p {
     margin: 0;
+}
+h1 {
+    font-size: 36px;
+    font-weight: normal;
+    text-transform: uppercase;
+    margin: 0px;
+}
+
+a {
+    display: inline-block;
 }
 .btn {
     color: #ffffff;
@@ -53,8 +64,7 @@ p {
 }
 .flex-centre {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /*flex-direction: column;*/
     align-items: center;
 }
 
@@ -62,15 +72,22 @@ p {
 header, footer, section {
     padding: 0 100px;
 }
-header, footer {
+
+header.contact-us-header {
+    padding: 0;
+    text-align: center;
+}
+header.contact-us-header > * {
+    margin-bottom: 40px;
+}
+
+header.nav, footer {
     background-color: #000000;
     display: flex;
     align-items: center;
     color:#ffffff;
 }
-header {
-    flex-direction: row;
-    justify-content: space-between;
+.nav {
     min-height: 64px;
 }
 
@@ -80,31 +97,31 @@ header {
     .header-navigation-container{
         justify-content: flex-end;
     }
-    .header-navigation-menu-item {
+    .header-navigation-container > li {
         margin: 0 2em 0 0;
     }
-        .header-navigation-menu-item:last-child {
+        .header-navigation-container > li:last-child {
             margin: 0 0 0 0;
         }
-        .header-navigation-menu-item a{
+        .header-navigation-container > li a {
             color:#ffffff;
             text-decoration: none;
         }
+
 footer {
     flex-direction: column;
     justify-content: center;
     min-height: 128px;
     font-size: 12px;
     }
-
-    .footer-social-item {
-        margin: 0 2em 0.5em 0;
+.footer-social-container > li{
+    margin: 0 2em 0.5em 0;
+}
+    .footer-social-container > li:last-child{
+        margin: 0;
     }
-        .footer-social-item:last-child {
-            margin: 0
-        }
+
 section {
-    /*color: #86878B;*/
     font-weight: 400;
 ;
 }
@@ -114,7 +131,7 @@ section {
     padding: 0;
     margin: 0;
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     flex-wrap: wrap;
     list-style: none;
     font-size: 18px;
@@ -124,34 +141,24 @@ section {
 
 
 .section-introduction {
-    height: 100%;
-    width: auto;
+    padding: 100px;
     background-image: url("../images/content/image.svg");
     background-repeat: no-repeat;
     background-size:cover;
     color:#ffffff;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
 }
-
 
 .introduction-title-col {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
+    max-width: 600px;
 }
-
-    .introduction-title-col *:not(.btn-download) {
+    .introduction-title-col > :not(.btn-download) {
         margin: 0 0 48px 0;
     }
 
-h1 {
-    font-size: 36px;
-    font-weight: normal;
-    text-transform: uppercase;
-}
 .introduction-title::after {
     content:'';
     display: block;
@@ -165,28 +172,26 @@ h1 {
     font-size: 16px;
     line-height: 24px;
 }
+.introduction-img-wrapper {
+
+}
 
 .btn-download {
     background-color: transparent;
     border-color: #ffffff;
-    /*width: 150px;*/
-    /*height: 42px;*/
 }
 
 
 .introduction-form-col {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+    max-width: 460px;
+    padding: 15px;
 }
 
 .form-trial {
     background-color: #ffffff;
-    width: 360px;
-    height: 390px;
+    min-width: 360px;
     border-radius: 5px;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -194,32 +199,25 @@ h1 {
 }
 
 .form-trial-header {
-    height: 15%;
-    width: inherit;
-    border-radius: 5px 5px 0 0;
+    text-align: center;
+    padding: 14px 15px;
     background-color: #DFDFDF;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 .form-trial-btn-container {
     background-color: #FF9B51;
-    height: 15%;
-    width: inherit;
-    border-radius: 0 0 5px 5px;
 }
 
 .btn-get-started {
-    width: inherit;
+    width: 100%;
     height: 100%;
+    padding: 15px;
     background-color: transparent;
     border: none;
     color: #ffffff;
     font-weight: 500;
-    text-transform: capitalize;
     font-size: 16px;
+    text-transform: capitalize;
 }
 .btn-get-started:hover {
     cursor: pointer;
@@ -239,25 +237,23 @@ h1 {
 }
 
 .form-trial-body {
-
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    padding: 0 4em;
+    padding: 3.5em;
 }
 
-.form-trial-input:not(:last-child) {
+.form-trial-control:not(:last-child) {
     margin-bottom: 2.7em;
 }
 
-    .form-trial-input input {
+    .form-trial-control input {
         width: 100%;
         border-width: 0 0 2px;
         border-color: #DFDFDF;
         padding: 0 0 0.5em 0;
     }
 
-    .form-trial-input input ::placeholder {
+    .form-trial-control input ::placeholder {
         font-size: 16px;
         color:#BDBDBD;
     ;
@@ -265,19 +261,20 @@ h1 {
     }
 
 
-    /*section social*/
+/*section social*/
 .section-social {
     display: flex;
     flex-display: row;
     justify-content: space-between;
     align-items: center;
+    padding: 25px 100px;
 }
-    .section-social > * {
+    .section-social > {
         margin: 16px 0;
     }
 
 .section-social-item:not(:last-child) {
-    margin: 0 2em 0.5em 0;
+    margin: 0 2em 0 0;
 }
 
 .section-social-text-block {
@@ -288,27 +285,32 @@ h1 {
     font-style: normal;
 }
 
-.section-social-list {
+.section-social-container {
     display: flex;
-    flex-direction: row;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .social-title {
     margin-bottom: 1em;
 }
 
-
 .section-stylish {
-    width: auto;
-    height: 20em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 55px 100px;
     background-image: url("../images/content/background-architecture.svg");
     background-repeat: no-repeat;
     background-size:cover;
-    filter:sepia(0.2);
-    margin: 0 auto;
+    margin: 0 0 0.5em 0;
     color: #FFFFFF;
 }
+.section-stylish :not(.btn-download)  {
+    margin: 0 0 30px 0;
+}
+
 .section-stylish-container {
     margin: 5em 0 ;
 }
@@ -328,15 +330,16 @@ h1 {
         margin: 0.4em auto 0;
     }
 
+
+
 /*section contact us*/
-
-.section-contact-us-container {
-    margin: 5em 0 7em;
+.section-contact-us {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px 100px;
 }
 
-.section-contact-us-header p {
-    margin: 1em auto 2em;
-}
 .contact-us-title {
     color: #212121;
 }
@@ -355,37 +358,55 @@ h1 {
 .contact-us-form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 25px;
+    min-height: 260px;
 }
-
-
 
 .contact-us-input-container {
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 48px;
+
 }
 
 .contact-us-input-container input,
 .contact-us-input-container textarea
 {
-    min-width: 32em;
+    min-width: 24em;
     border-width: 0 0 2px;
     border-color: #DFDFDF;
-    margin: 0 5em 4em;
     font-size: 16px;
 }
+.contact-us-input-container input {
+    margin: 0 0 4em 0;
+}
+
+.contact-us-input-container textarea {
+    margin: 0;
+    height: 100%;
+}
+
 
 .contact-us-input-container input ::placeholder,
 .contact-us-input-container textarea ::placeholder {
     color: #BDBDBD;
     font-size: 16px;
 }
-.input-container-left {
+
+.input-container {
     display: flex;
     flex-direction: column;
+    padding: 0 32px;
+}
+
+.input-container input:last-child {
+    margin-bottom: 0;
 }
 
 .btn-contact-us {
     background-color: #FF8B38;
     border-color: #FF8B38;
 }
+
 
