--- a/HTML&CSS/Layout1/assets/styles/styles.css
+++ b/HTML&CSS/Layout1/assets/styles/styles.css
@@ -1,11 +1,12 @@
 :root {
-    --section-header-marging: 30px
+    --section-header-marging: 30px;
+    --color-white: #fff;
 }
 
 
 body {
     height: 100vh;
-    border: solid 1px #fff;
+    border: solid 1px var(--color-white);
     margin: 0;
     font-family: 'Raleway', sans-serif;
     box-sizing: border-box;
@@ -54,8 +55,8 @@ a {
     display: inline-block;
 }
 .btn {
-    color: #ffffff;
-    border: 2px solid #ffffff;
+    color: var(--color-white);
+    border: 2px solid var(--color-white);
     border-radius: 5px;
     font-weight: 500;
     font-size: 18px;
@@ -127,7 +128,7 @@ header.nav, footer {
     background-color: #000000;
     display: flex;
     align-items: center;
-    color:#ffffff;
+    color:var(--color-white);
 }
 .nav {
     min-height: 64px;
@@ -146,7 +147,7 @@ header.nav, footer {
             margin: 0 0 0 0;
         }
         .header-navigation-container > li a {
-            color:#ffffff;
+            color:var(--color-white);
             text-decoration: none;
         }
 
@@ -177,7 +178,7 @@ section {
     flex-wrap: wrap;
     list-style: none;
     font-size: 18px;
-    color: #ffff;
+    color: var(--color-white);
 }
 
 
@@ -187,7 +188,7 @@ section {
     background-image: url("../images/content/image.svg");
     background-repeat: no-repeat;
     background-size:cover;
-    color:#ffffff;
+    color:var(--color-white);
     display: flex;
     justify-content: space-between;
 }
@@ -213,7 +214,7 @@ section {
         display: block;
         width: 4em;
         height: 2px;
-        background-color: #fff;
+        background-color: var(--color-white);
     }
 
 .introduction-text {
@@ -227,7 +228,7 @@ section {
 
 .btn-download {
     background-color: transparent;
-    border-color: #ffffff;
+    border-color: var(--color-white);
 }
 
 
@@ -237,7 +238,7 @@ section {
 }
 
 .form-trial {
-    background-color: #ffffff;
+    background-color: var(--color-white);
     min-width: 360px;
     border-radius: 5px;
     overflow: hidden;
@@ -263,7 +264,7 @@ section {
     padding: 15px;
     background-color: transparent;
     border: none;
-    color: #ffffff;
+    color: var(--color-white);
     font-weight: 500;
     font-size: 16px;
     text-transform: capitalize;
@@ -375,7 +376,7 @@ section {
     background-image: url("../images/content/background-architecture.svg");
     background-repeat: no-repeat;
     background-size:cover;
-    color: #FFFFFF;
+    color: var(--color-white);
 }
 .section-stylish >  :not(.stylish-container)  {
     margin: 0 0 40px 0;
@@ -386,10 +387,10 @@ section {
 }
 
 .stylish-title {
-    color: #FFFFFF;
+    color: var(--color-white);
 }
 h2.stylish-title::after {
-    background-color: #FFFFFF;
+    background-color: var(--color-white);
 
 }
 
@@ -517,4 +518,63 @@ h2.stylish-title::after {
     background-color: #F5F5F5;
 }
 
+.pricing-container:not(div p){
+    transition: transform 2s ease;
+}
+    div.pricing-container :hover {
+        transform: scale(1.1);
+    }
 
+div.pricing-container>p:hover {
+    transform: none;
+
+}
+
+.pricing-header-item {
+    background-color: #333333;
+    border-bottom: 1px solid var(--color-white);
+    text-align: center;
+    font-weight: 600;
+    color: var(--color-white);
+    padding: 15px 0;
+}
+
+.pricing-header-price-item {
+    font-family: Open Sans, sans-serif;
+    font-size: 38px;
+    padding: 20px 130px;
+}
+
+.frequency-item {
+    font-style: italic;
+    font-size: 12px;
+    font-weight:200;
+    border-bottom: 6px solid #FF8B38;
+    border-bottom-color: #FF8B38;
+    transition: border-bottom-color 1s ease;
+}
+    p.frequency-item :hover {
+        border-bottom-color: red;
+    }
+
+  .pricing-item {
+      padding: 12px;
+      margin-bottom: 3px;
+      font-size: 14px;
+      font-family: Raleway, sans-serif;
+      text-transform: uppercase;
+      text-align: center;
+      opacity: 0.6;
+      background-color: var(--color-white);
+      color: #86878B;
+  }
+      .pricing-item:last-of-type {
+          margin-bottom: 0;
+      }
+
+.popular-item {
+    background-color: #FF8B38;
+    text-transform: uppercase;
+    color: var(--color-white);
+    opacity: 1;
+}
