--- a/HTML&CSS/Layout1/assets/styles/styles.css
+++ b/HTML&CSS/Layout1/assets/styles/styles.css
@@ -3,14 +3,18 @@
     --color-white: #fff;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
 body {
     height: 100vh;
     border: solid 1px var(--color-white);
-    margin: 0;
     font-family: 'Raleway', sans-serif;
-    box-sizing: border-box;
     color: #86878B;
 }
+
 button:focus {
     outline: none;
 }
@@ -20,10 +24,12 @@ textarea {
     color: #86878B;
     opacity: 0.5;
 }
+
 textarea {
     resize: none;
     font-family: 'Raleway', sans-serif;
 }
+
     input:focus,
     textarea:focus{
         outline: none;
@@ -69,6 +75,7 @@ a {
     height: 42px;
     transition: color 1s ease;
 }
+
     .btn:hover {
         cursor: pointer;
      }
@@ -80,13 +87,12 @@ a {
     position: relative;
     padding-bottom: 30px;
     color: #212121;
-
 }
 
     .title::after {
         position: absolute;
         bottom: 0;
-        left: 45%;
+        left: calc((100% - 3em)/2);
         content: ' ';
         display: block;
         height: 2px;
@@ -101,35 +107,39 @@ a {
     color: #333333;
 }
 
+.list-reset {
+    list-style: none;
+}
 
-header, footer, section {
+.horizontal-align {
     padding: 0 100px;
+}
+
+.between-align {
+    display: flex;
+    justify-content: space-around;
 }
 
 section {
     font-weight: 400;
 }
 
-header.contact-us-header,
-header.awesome-header,
-header.stylish-header,
-header.pricing-header,
-header.feedbacks-header {
+header h2:not(:last-child) {
+    margin-bottom: var(--section-header-marging);
+}
+
+.header {
+    min-height: 64px;
+}
+
+.header-align {
     padding: 0;
     text-align: center;
     margin: 0 0 64px 0;
 }
-    header.contact-us-header > :not(p),
-    header.awesome-header > :not(p),
-    header.stylish-header > :not(p),
-    header.pricing-header > :not(p),
-    header.feedbacks-header > :not(p)
-    {
-        margin-bottom: var(--section-header-marging);
-    }
 
-header.nav,
-footer {
+.root-header,
+.root-footer {
     background-color: #000000;
     display: flex;
     align-items: center;
@@ -137,62 +147,69 @@ footer {
 }
 
 .nav {
-    min-height: 64px;
+    align-self: stretch;
+    flex-grow:1;
+}
+.nav-links{
+    justify-content: flex-end;
+    height: 100%;
 }
 
-    .header-navigation {
-        flex-grow:1;
+    .nav-links > li {
+        margin: 0 2em 0 0;
+        height: inherit;
     }
-    .header-navigation-container{
-        justify-content: flex-end;
-    }
-        .header-navigation-container > li {
-            margin: 0 2em 0 0;
+        .nav-links > li:last-child {
+            margin: 0 0 0 0;
         }
-            .header-navigation-container > li:last-child {
-                margin: 0 0 0 0;
-            }
-            .header-navigation-container > li a {
+
+            .nav-links > li a {
+                display: flex;
+                align-items: center;
                 color:var(--color-white);
+                background-color: #000000;
                 text-decoration: none;
-                transition: color 0.5s ease;
+                height: inherit;
+                padding: 0 5px;
+                transition: all 0.5s ease;
             }
 
-                .header-navigation-container > li a:hover {
-                    color:#FF9B51;
-
+                .nav-links> li a:hover {
+                    background-color:#303030;
                 }
 
-footer {
+
+.root-footer {
     flex-direction: column;
     justify-content: center;
     min-height: 128px;
     font-size: 12px;
-    }
-
-.footer-social-container > li{
-    margin: 0 2em 0.5em 0;
 }
-    .footer-social-container > li:last-child{
-        margin: 0;
+
+.footer-social-links > li{
+    margin-right: 2em;
+}
+
+    .footer-social-links > li:last-child{
+        margin-right: 0;
     }
 
 
-
-.footer-social-container,
-.header-navigation-container {
+.footer-social-links,
+.nav-links {
     padding: 0;
     margin: 0;
     display: flex;
-    /*flex-direction: row;*/
     flex-wrap: wrap;
-    list-style: none;
     font-size: 18px;
     color: var(--color-white);
 }
 
+.footer-social-links {
+    margin-bottom: 0.5em;
+}
 
-
+/*SECTION INTRODUCTION*/
 .section-introduction {
     padding: 100px;
     background-image: url("../images/content/image.svg");
@@ -207,7 +224,9 @@ footer {
     display: flex;
     flex-direction: column;
     max-width: 600px;
+    padding-right: 30px;
 }
+
     .introduction-title-col > :not(.btn-download) {
         margin: 0 0 48px 0;
     }
@@ -216,6 +235,7 @@ footer {
     position: relative;
     padding-bottom: var(--section-header-marging);
 }
+
     h1.introduction-title::after {
         position: absolute;
         left: 0;
@@ -232,22 +252,18 @@ footer {
     font-size: 16px;
     line-height: 24px;
 }
-.introduction-img-wrapper {
 
-}
 
 .btn-download {
     background-color: transparent;
     border-color: var(--color-white);
-    transition: background-color 0.8s ease;
-    transition: color 0.8s ease;
-
+    transition: background-color 0.8s ease, color 0.8s ease;
 }
+
     .btn-download:hover {
         background-color: #ffffff;
         color: #FF9B51;
     }
-
 
 .introduction-form-col {
     max-width: 460px;
@@ -264,11 +280,6 @@ footer {
     justify-content: space-between;
 }
 
-.form-trial-header {
-    text-align: center;
-    padding: 14px 15px;
-    background-color: #DFDFDF;
-}
 
 .form-trial-btn-container {
     background-color: #FF9B51;
@@ -286,16 +297,14 @@ footer {
     text-transform: capitalize;
 }
 
-    .btn-get-started:hover {
-        cursor: pointer;
-    }
-
 .trial-header-title {
+    padding: 14px 15px;
     font-size: 16px;
     font-weight: 700;
     text-transform: capitalize;
+    text-align: center;
+    background-color: #DFDFDF;
     color: #333333;
-
 }
 
 .trial-header-key-word {
@@ -309,25 +318,25 @@ footer {
     padding: 3.5em;
 }
 
-.form-trial-control:not(:last-child) {
-    margin-bottom: 2.7em;
-}
-
-    .form-trial-control input {
+    input.form-trial-item  {
         width: 100%;
         border-width: 0 0 2px;
         border-color: #DFDFDF;
         padding: 0 0 0.5em 0;
     }
 
-    .form-trial-control input ::placeholder {
-        font-size: 16px;
-        color:#BDBDBD;
-        opacity: 0.4;
-    }
+        input.form-trial-item:not(:last-child) {
+            margin-bottom: 2.7em;
+        }
+
+        input.form-trial-item ::placeholder {
+            font-size: 16px;
+            color:#BDBDBD;
+            opacity: 0.4;
+        }
 
 
-/*section social*/
+/*SECTION SOCIAL*/
 .section-social {
     display: flex;
     justify-content: space-between;
@@ -338,7 +347,7 @@ footer {
         margin: 16px 0;
     }
 
-.section-social-item:not(:last-child) {
+.social-icon:not(:last-child) {
     margin: 0 2em 0 0;
 }
 
@@ -350,15 +359,15 @@ footer {
     font-style: normal;
 }
 
-.section-social-container {
+.social-icons {
     display: flex;
-    list-style: none;
     margin: 0;
     padding: 0;
 }
 .social-title {
     margin-bottom: 1em;
 }
+
 
 /*SECTION AWESOME POINTS*/
 .section-awesome-points {
@@ -368,18 +377,11 @@ footer {
     width: 4em;
 }
 
-.awesome-points-container,
-.feedbacks-container,
-.pricing-container{
-    display: flex;
-    justify-content: space-around;
-}
-
-.awesome-point-item {
+.awesome-point {
     text-align: center;
     padding: 0 40px;
 }
-    .awesome-point-item > *:not(p) {
+    .awesome-point > *:not(p) {
         margin-bottom: 40px;
     }
 
@@ -424,47 +426,45 @@ h2.stylish-title::after {
     min-height: 260px;
 }
 
-.contact-us-input-container {
+.contact-us-fields {
     display: flex;
     justify-content: space-between;
     margin-bottom: 48px;
-
 }
 
-.contact-us-input-container input,
-.contact-us-input-container textarea
+.contact-us-fields input,
+.contact-us-fields textarea
 {
-    min-width: 24em;
+    min-width: 28em;
     border-width: 0 0 2px;
     border-color: #DFDFDF;
     font-size: 16px;
 }
-.contact-us-input-container input {
+.contact-us-fields input {
     margin: 0 0 4em 0;
 }
 
-.contact-us-input-container textarea {
+.contact-us-fields textarea {
     margin: 0;
     height: 100%;
 }
 
 
-.contact-us-input-container input ::placeholder,
-.contact-us-input-container textarea ::placeholder {
+.contact-us-fields input ::placeholder,
+.contact-us-fields textarea ::placeholder {
     color: #BDBDBD;
     font-size: 16px;
 }
 
-.input-container {
+.contact-us-col {
     display: flex;
     flex-direction: column;
     padding: 0 32px;
 }
 
-.input-container input:last-child {
+.contact-us-col input:last-child {
     margin-bottom: 0;
 }
-
 
 
 /*SECTION TABS*/
@@ -490,18 +490,13 @@ h2.stylish-title::after {
     padding: 15px;
 }
 
-.tabs-btn-container {
+.tabs {
     display: flex;
     flex-direction: column;
-    list-style: none;
+    flex-shrink: 0;
     border-radius: 5%;
     overflow: hidden;
 }
-    .tabs-btn-container div {
-        width: max-content;
-        margin-bottom: 5px;
-        border: none;
-    }
 
 .btn-tab {
     width: 112px;
@@ -519,31 +514,30 @@ h2.stylish-title::after {
 }
 
 
-/*SECTION PRICING*/
-.section-pricing {
-    padding: 100px;
-}
 /*SECTION FEEDBACKS*/
 .section-feedbacks {
     padding: 100px;
 }
 
-.feedback-item {
+.feedback {
     display: flex;
     flex-direction: column;
 }
 
 .feedback-block {
-    max-height: 120px;
     max-width: 300px;
     background-color: #F5F5F5;
     padding: 18px;
     margin:  0 0 40px 0;
     position: relative;
     z-index: 2;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 16px;
+    word-break: break-word;
 }
 
-    .feedback-block ::after {
+    .feedback-block::after {
         content: '';
         position: absolute;
         left: 8px;
@@ -553,12 +547,6 @@ h2.stylish-title::after {
         z-index: 4;
     }
 
-.feedback-text {
-    font-style: italic;
-    font-weight: 400;
-    font-size: 16px;
-    word-break: break-word;
-}
 .feedback-user {
     display: flex;
     align-items: center;
@@ -575,21 +563,15 @@ h2.stylish-title::after {
 }
 
 
+/*SECTION PRICING*/
+.section-pricing {
+    padding: 100px;
+}
+
 .section-pricing,
 .section-tabs {
     background-color: #F5F5F5;
 }
-
-.pricing-container {
-    align-items: flex-end;
-}
-
-.pricing-container {
-    transition: transform 2s ease;
-}
-    .pricing-container :hover {
-        transform: scale(1.1);
-    }
 
 .pricing-header-item {
     background-color: #333333;
@@ -600,11 +582,27 @@ h2.stylish-title::after {
     padding: 15px 0;
 }
 
+.prices {
+    align-items: flex-end;
+}
+
 .price-item {
     font-family: Open Sans, sans-serif;
     font-size: 38px;
-    padding: 20px 130px;
+    padding: 20px 30px;
+    text-align: center;
 }
+
+.price {
+    transition: transform 1s ease;
+    min-width: 298px;
+}
+    .price:hover {
+        transform: scale(1.1);
+    }
+    .price:nth-of-type(2) .frequency-item {
+        border-bottom: none;
+    }
 
 .frequency-item {
     font-style: italic;
@@ -612,26 +610,23 @@ h2.stylish-title::after {
     font-weight:200;
     border-bottom: 6px solid #FF8B38;
     border-bottom-color: #FF8B38;
-    transition: border-bottom-color 1s ease;
 }
-    p.frequency-item :hover {
-        border-bottom-color: red;
-    }
 
-  .pricing-item {
-      padding: 12px;
-      margin-bottom: 3px;
-      font-size: 14px;
-      font-family: Raleway, sans-serif;
-      text-transform: uppercase;
-      text-align: center;
-      opacity: 0.6;
-      background-color: var(--color-white);
-      color: #86878B;
-  }
-      .pricing-item:last-of-type {
-          margin-bottom: 0;
-      }
+.pricing-item {
+    padding: 12px;
+    margin-bottom: 3px;
+    font-size: 14px;
+    font-family: Raleway, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0.6;
+    background-color: var(--color-white);
+    color: #86878B;
+}
+
+    .pricing-item:last-of-type {
+        margin-bottom: 0;
+    }
 
 .popular-item {
     background-color: #FF8B38;
@@ -640,23 +635,13 @@ h2.stylish-title::after {
     opacity: 1;
 }
 
-div.pricing-header-item:hover,
-div.pricing-item:hover {
-    transform: none;
-}
-
-
-.btn-get-started,
-.btn-tabs-download,
-.btn-contact-us {
+.btn-orange {
     background-color: #FF8B38;
     border-color: #FF8B38;
     transition: all 0.7s ease;
 }
 
-    .btn-get-started:hover,
-    .btn-tabs-download:hover,
-    .btn-contact-us:hover {
+    .btn-orange:hover {
         border-color: #d25800;
         background-color: #d25800;
     }
