--- a/HTML&CSS/Layout1/assets/styles/styles.css
+++ b/HTML&CSS/Layout1/assets/styles/styles.css
@@ -1,6 +1,12 @@
 :root {
     --section-header-marging: 30px;
-    --color-white: #fff;
+    --primary-color: #fff;
+    --primary-background-color: #F5F5F5;
+    --primary-bright-color: #FF8B38;
+    --primary-brighter-color: #de6007;
+    --secondary-color: #000000;
+    --secondary-lighter-color: #86878B;
+    --primary-font-family:'Raleway', sans-serif;
 }
 
 * {
@@ -10,9 +16,9 @@
 
 body {
     height: 100vh;
-    border: solid 1px var(--color-white);
-    font-family: 'Raleway', sans-serif;
-    color: #86878B;
+    border: solid 1px var(--primary-color);
+    font-family: var(--primary-font-family);
+    color: var(--secondary-lighter-color);
 }
 
 button:focus {
@@ -21,19 +27,18 @@ button:focus {
 
 input,
 textarea {
-    color: #86878B;
+    color: var(--secondary-lighter-color);
     opacity: 0.5;
 }
 
 textarea {
     resize: none;
-    font-family: 'Raleway', sans-serif;
 }
 
     input:focus,
     textarea:focus{
         outline: none;
-        color: #86878B;
+        color: var(--secondary-lighter-color);
         opacity: 1;
     }
 
@@ -64,15 +69,15 @@ a {
 }
 
 .btn {
-    color: var(--color-white);
-    border: 2px solid var(--color-white);
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
     border-radius: 5px;
     font-weight: 500;
     font-size: 18px;
     line-height: 18px;
     text-transform: capitalize;
-    width: 164px;
-    height: 42px;
+    width: max-content;
+    padding: 10px 34px;
     transition: color 1s ease;
 }
 
@@ -92,12 +97,13 @@ a {
     .title::after {
         position: absolute;
         bottom: 0;
-        left: calc((100% - 3em)/2);
-        content: ' ';
+        left: 50%;
+        transform: translateX(-50%);
+        content: '';
         display: block;
         height: 2px;
         width: 3em;
-        background-color: #FF8B38;
+        background-color: var(--primary-bright-color);
     }
 
 .subtitle {
@@ -140,10 +146,10 @@ header h2:not(:last-child) {
 
 .root-header,
 .root-footer {
-    background-color: #000000;
+    background-color: var(--secondary-color);
     display: flex;
     align-items: center;
-    color:var(--color-white);
+    color:var(--primary-color);
 }
 
 .nav {
@@ -166,8 +172,8 @@ header h2:not(:last-child) {
             .nav-links > li a {
                 display: flex;
                 align-items: center;
-                color:var(--color-white);
-                background-color: #000000;
+                color:var(--primary-color);
+                background-color: var(--secondary-color);
                 text-decoration: none;
                 height: inherit;
                 padding: 0 5px;
@@ -202,7 +208,7 @@ header h2:not(:last-child) {
     display: flex;
     flex-wrap: wrap;
     font-size: 18px;
-    color: var(--color-white);
+    color: var(--primary-color);
 }
 
 .footer-social-links {
@@ -215,19 +221,19 @@ header h2:not(:last-child) {
     background-image: url("../images/content/image.svg");
     background-repeat: no-repeat;
     background-size:cover;
-    color:var(--color-white);
+    color:var(--primary-color);
     display: flex;
     justify-content: space-between;
 }
 
-.introduction-title-col {
+.introduction-col:nth-child(1) {
     display: flex;
     flex-direction: column;
     max-width: 600px;
     padding-right: 30px;
 }
 
-    .introduction-title-col > :not(.btn-download) {
+    .introduction-col:nth-child(1) > :not(.btn-download) {
         margin: 0 0 48px 0;
     }
 
@@ -244,7 +250,7 @@ header h2:not(:last-child) {
         display: block;
         width: 4em;
         height: 2px;
-        background-color: var(--color-white);
+        background-color: var(--primary-color);
     }
 
 .introduction-text {
@@ -256,7 +262,7 @@ header h2:not(:last-child) {
 
 .btn-download {
     background-color: transparent;
-    border-color: var(--color-white);
+    border-color: var(--primary-color);
     transition: background-color 0.8s ease, color 0.8s ease;
 }
 
@@ -265,13 +271,12 @@ header h2:not(:last-child) {
         color: #FF9B51;
     }
 
-.introduction-form-col {
-    max-width: 460px;
-    padding: 15px;
+.introduction-col:nth-child(2) {
+    padding-top: 16px;
 }
 
 .form-trial {
-    background-color: var(--color-white);
+    background-color: var(--primary-color);
     min-width: 360px;
     border-radius: 5px;
     overflow: hidden;
@@ -287,11 +292,9 @@ header h2:not(:last-child) {
 
 .btn-get-started {
     width: 100%;
-    height: 100%;
     padding: 15px;
-    background-color: transparent;
     border: none;
-    color: var(--color-white);
+    color: var(--primary-color);
     font-weight: 500;
     font-size: 16px;
     text-transform: capitalize;
@@ -355,7 +358,7 @@ header h2:not(:last-child) {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #86878B;
+    color: var(--secondary-lighter-color);
     font-style: normal;
 }
 
@@ -373,7 +376,7 @@ header h2:not(:last-child) {
 .section-awesome-points {
     padding: 100px;
 }
-.awesome-header h2:after {
+.awesome-header h2::after {
     width: 4em;
 }
 
@@ -394,7 +397,7 @@ header h2:not(:last-child) {
     background-image: url("../images/content/background-architecture.svg");
     background-repeat: no-repeat;
     background-size:cover;
-    color: var(--color-white);
+    color: var(--primary-color);
 }
 .section-stylish >  :not(.stylish-container)  {
     margin: 0 0 40px 0;
@@ -405,10 +408,10 @@ header h2:not(:last-child) {
 }
 
 .stylish-title {
-    color: var(--color-white);
+    color: var(--primary-color);
 }
 h2.stylish-title::after {
-    background-color: var(--color-white);
+    background-color: var(--primary-color);
 
 }
 
@@ -466,7 +469,6 @@ h2.stylish-title::after {
     margin-bottom: 0;
 }
 
-
 /*SECTION TABS*/
 .section-tabs {
     display: flex;
@@ -501,6 +503,7 @@ h2.stylish-title::after {
 .btn-tab {
     width: 112px;
     height: 112px;
+    padding: 0 16px;
     background-color: #333333;
     border-radius: 0;
     transition: background-color 0.8s ease;
@@ -526,7 +529,7 @@ h2.stylish-title::after {
 
 .feedback-block {
     max-width: 300px;
-    background-color: #F5F5F5;
+    background-color: var(--primary-background-color);
     padding: 18px;
     margin:  0 0 40px 0;
     position: relative;
@@ -543,7 +546,7 @@ h2.stylish-title::after {
         left: 8px;
         bottom: -30px;
         border: 14px solid transparent;
-        border-top: 20px solid #F5F5F5;
+        border-top: 20px solid var(--primary-background-color);
         z-index: 4;
     }
 
@@ -570,16 +573,16 @@ h2.stylish-title::after {
 
 .section-pricing,
 .section-tabs {
-    background-color: #F5F5F5;
+    background-color: var(--primary-background-color);
 }
 
 .pricing-header-item {
     background-color: #333333;
-    border-bottom: 1px solid var(--color-white);
+    border-bottom: 1px solid var(--primary-color);
     text-align: center;
     font-weight: 600;
-    color: var(--color-white);
-    padding: 15px 0;
+    color: var(--primary-color);
+    padding: 15px 12px;
 }
 
 .prices {
@@ -587,7 +590,6 @@ h2.stylish-title::after {
 }
 
 .price-item {
-    font-family: Open Sans, sans-serif;
     font-size: 38px;
     padding: 20px 30px;
     text-align: center;
@@ -608,20 +610,18 @@ h2.stylish-title::after {
     font-style: italic;
     font-size: 12px;
     font-weight:200;
-    border-bottom: 6px solid #FF8B38;
-    border-bottom-color: #FF8B38;
+    border-bottom: 6px solid var(--primary-bright-color);
 }
 
 .pricing-item {
     padding: 12px;
     margin-bottom: 3px;
     font-size: 14px;
-    font-family: Raleway, sans-serif;
     text-transform: uppercase;
     text-align: center;
     opacity: 0.6;
-    background-color: var(--color-white);
-    color: #86878B;
+    background-color: var(--primary-color);
+    color: var(--secondary-lighter-color);
 }
 
     .pricing-item:last-of-type {
@@ -629,19 +629,19 @@ h2.stylish-title::after {
     }
 
 .popular-item {
-    background-color: #FF8B38;
+    background-color: var(--primary-bright-color);
     text-transform: uppercase;
-    color: var(--color-white);
+    color: var(--primary-color);
     opacity: 1;
 }
 
 .btn-orange {
-    background-color: #FF8B38;
-    border-color: #FF8B38;
+    border-color: var(--primary-bright-color);
+    background-color: var(--primary-bright-color);
     transition: all 0.7s ease;
 }
 
     .btn-orange:hover {
-        border-color: #d25800;
-        background-color: #d25800;
+        border-color: var(--primary-brighter-color);
+        background-color: var(--primary-brighter-color);
     }
